{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 69,
  "lineage": "a103f834-2c6d-5ff1-fec8-85456657866c",
  "resources": [
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-04c9dd9ed1aa4310f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c9dd9ed1aa4310f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "state": "available",
            "tags": {
              "Name": "njs-default-main-private-eu-west-2a"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-041a65ad2b256cb50",
            "description": "Security group for ECS Service njs-default-service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041a65ad2b256cb50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cb17ba3093ae18d1"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "njs-default-service-service-20260424135343141700000008",
            "name_prefix": "njs-default-service-service-",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "njs-default-service-service"
            },
            "tags_all": {
              "Name": "njs-default-service-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sg-041a65ad2b256cb50",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0eb6fae6190a8b734",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0eb6fae6190a8b734",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-041a65ad2b256cb50",
            "security_group_rule_id": "sgr-0eb6fae6190a8b734",
            "tags": {
              "Name": "njs-default-service-service-all"
            },
            "tags_all": {
              "Name": "njs-default-service-service-all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0eb6fae6190a8b734",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0cb0daa10c321ed41",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "http from ALB",
            "from_port": 3000,
            "id": "sgr-0cb0daa10c321ed41",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0cb17ba3093ae18d1",
            "region": "eu-west-2",
            "security_group_id": "sg-041a65ad2b256cb50",
            "security_group_rule_id": "sgr-0cb0daa10c321ed41",
            "tags": {
              "Name": "njs-default-service-service-alb_ingress"
            },
            "tags_all": {
              "Name": "njs-default-service-service-alb_ingress"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0cb0daa10c321ed41",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.elb-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/njs-default-frontend/d8551c66a481b041",
            "arn_suffix": "app/njs-default-frontend/d8551c66a481b041",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "njs-default-frontend-1948790234.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/njs-default-frontend/d8551c66a481b041",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "njs-default-frontend",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-0cb17ba3093ae18d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-016f311ff6b76679a"
              },
              {
                "subnet_id": "subnet-0ad436970d4f9186e"
              },
              {
                "subnet_id": "subnet-0c58a7a30a5b13af8"
              }
            ],
            "subnets": [
              "subnet-016f311ff6b76679a",
              "subnet-0ad436970d4f9186e",
              "subnet-0c58a7a30a5b13af8"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-010fa30ecfb923189",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/njs-default-frontend/d8551c66a481b041"
          },
          "dependencies": [
            "module.elb-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/njs-default-frontend/d8551c66a481b041/5d7feb8909d0c155",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/njs-default-service/5cf8a25b21bf382f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/njs-default-frontend/d8551c66a481b041/5d7feb8909d0c155",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/njs-default-frontend/d8551c66a481b041",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:listener/app/njs-default-frontend/d8551c66a481b041/5d7feb8909d0c155"
          },
          "dependencies": [
            "module.elb-frontend.aws_lb.this",
            "module.elb-frontend.aws_lb_target_group.this",
            "module.elb-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "njs-default-ecs-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/njs-default-service/5cf8a25b21bf382f",
            "arn_suffix": "targetgroup/njs-default-service/5cf8a25b21bf382f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/njs-default-service/5cf8a25b21bf382f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:055706347965:loadbalancer/app/njs-default-frontend/d8551c66a481b041"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "njs-default-service",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:055706347965:targetgroup/njs-default-service/5cf8a25b21bf382f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-0cb17ba3093ae18d1",
            "description": "Security group for njs-default-frontend application load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "ECS access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041a65ad2b256cb50"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-0cb17ba3093ae18d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "njs-default-frontend-20260424135339393200000006",
            "name_prefix": "njs-default-frontend-",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sg-0cb17ba3093ae18d1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0f1eb306076e61076",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ECS access",
            "from_port": 3000,
            "id": "sgr-0f1eb306076e61076",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-041a65ad2b256cb50",
            "region": "eu-west-2",
            "security_group_id": "sg-0cb17ba3093ae18d1",
            "security_group_rule_id": "sgr-0f1eb306076e61076",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0f1eb306076e61076",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.elb-frontend.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb-frontend",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0682091c04b7a4b45",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic",
            "from_port": 3000,
            "id": "sgr-0682091c04b7a4b45",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0cb17ba3093ae18d1",
            "security_group_rule_id": "sgr-0682091c04b7a4b45",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0682091c04b7a4b45",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.elb-frontend.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_wp_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-0bb46da5cf8315b50",
            "description": "Control traffic to/from RDS Aurora njs-default-cluster",
            "egress": [],
            "id": "sg-0bb46da5cf8315b50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041a65ad2b256cb50"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "njs-default-cluster-20260424135339101100000005",
            "name_prefix": "njs-default-cluster-",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "njs-default-cluster"
            },
            "tags_all": {
              "Name": "njs-default-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sg-0bb46da5cf8315b50",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_wp_db",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rds_wp_db",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_from_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group-rule/sgr-0f805faa492a57b29",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0f805faa492a57b29",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-041a65ad2b256cb50",
            "region": "eu-west-2",
            "security_group_id": "sg-0bb46da5cf8315b50",
            "security_group_rule_id": "sgr-0f805faa492a57b29",
            "tags": {
              "Name": "njs-default-cluster-ingress_from_ecs"
            },
            "tags_all": {
              "Name": "njs-default-cluster-ingress_from_ecs"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "sgr-0f805faa492a57b29",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.rds_wp_db.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:network-acl/acl-0055b13f6a163336f",
            "default_network_acl_id": "acl-0055b13f6a163336f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0055b13f6a163336f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "subnet_ids": [
              "subnet-016f311ff6b76679a",
              "subnet-04c9dd9ed1aa4310f",
              "subnet-071d4ab02c42157dc",
              "subnet-0ad436970d4f9186e",
              "subnet-0c58a7a30a5b13af8",
              "subnet-0c972d3284fa40e09"
            ],
            "tags": {
              "Name": "njs-default-main-default"
            },
            "tags_all": {
              "Name": "njs-default-main-default"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:route-table/rtb-02eb86630d1702cc3",
            "default_route_table_id": "rtb-02eb86630d1702cc3",
            "id": "rtb-02eb86630d1702cc3",
            "owner_id": "055706347965",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "njs-default-main-default"
            },
            "tags_all": {
              "Name": "njs-default-main-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:security-group/sg-03cb7bd9432f0e5fe",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03cb7bd9432f0e5fe",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "njs-default-main-default"
            },
            "tags_all": {
              "Name": "njs-default-main-default"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b134ae8c1a6abe5d",
            "arn": "arn:aws:ec2:eu-west-2:055706347965:elastic-ip/eipalloc-0b134ae8c1a6abe5d",
            "association_id": "eipassoc-0985e57a23a03b1a2",
            "domain": "vpc",
            "id": "eipalloc-0b134ae8c1a6abe5d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d7d9152f8ba7f7c8",
            "private_dns": "ip-10-0-101-157.eu-west-2.compute.internal",
            "private_ip": "10.0.101.157",
            "public_dns": "ec2-13-135-215-53.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.135.215.53",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-eu-west-2a"
            },
            "tags_all": {
              "Name": "njs-default-main-eu-west-2a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "eipalloc-0b134ae8c1a6abe5d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:internet-gateway/igw-0a8cab59aa8e353d0",
            "id": "igw-0a8cab59aa8e353d0",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main"
            },
            "tags_all": {
              "Name": "njs-default-main"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "igw-0a8cab59aa8e353d0",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b134ae8c1a6abe5d",
            "association_id": "eipassoc-0985e57a23a03b1a2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07f5551131b3c7e85",
            "network_interface_id": "eni-0d7d9152f8ba7f7c8",
            "private_ip": "10.0.101.157",
            "public_ip": "13.135.215.53",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016f311ff6b76679a",
            "tags": {
              "Name": "njs-default-main-eu-west-2a"
            },
            "tags_all": {
              "Name": "njs-default-main-eu-west-2a"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "nat-07f5551131b3c7e85",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bc5de80229bca49d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07f5551131b3c7e85",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0bc5de80229bca49d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0bc5de80229bca49d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a8cab59aa8e353d0",
            "id": "r-rtb-08d1d587a7b149a9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-08d1d587a7b149a9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-08d1d587a7b149a9b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:route-table/rtb-0bc5de80229bca49d",
            "id": "rtb-0bc5de80229bca49d",
            "owner_id": "055706347965",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f5551131b3c7e85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "njs-default-main-private"
            },
            "tags_all": {
              "Name": "njs-default-main-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtb-0bc5de80229bca49d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:route-table/rtb-08d1d587a7b149a9b",
            "id": "rtb-08d1d587a7b149a9b",
            "owner_id": "055706347965",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8cab59aa8e353d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "njs-default-main-public"
            },
            "tags_all": {
              "Name": "njs-default-main-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtb-08d1d587a7b149a9b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07236f8ffc3d41723",
            "region": "eu-west-2",
            "route_table_id": "rtb-0bc5de80229bca49d",
            "subnet_id": "subnet-04c9dd9ed1aa4310f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-07236f8ffc3d41723",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fce62f0615b1a86",
            "region": "eu-west-2",
            "route_table_id": "rtb-0bc5de80229bca49d",
            "subnet_id": "subnet-071d4ab02c42157dc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-05fce62f0615b1a86",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3eaf3cf02098201",
            "region": "eu-west-2",
            "route_table_id": "rtb-0bc5de80229bca49d",
            "subnet_id": "subnet-0c972d3284fa40e09"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-0a3eaf3cf02098201",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03558ea7b75ac63ef",
            "region": "eu-west-2",
            "route_table_id": "rtb-08d1d587a7b149a9b",
            "subnet_id": "subnet-016f311ff6b76679a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-03558ea7b75ac63ef",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028a388aadf01d558",
            "region": "eu-west-2",
            "route_table_id": "rtb-08d1d587a7b149a9b",
            "subnet_id": "subnet-0c58a7a30a5b13af8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-028a388aadf01d558",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e90416a921b3e1a1",
            "region": "eu-west-2",
            "route_table_id": "rtb-08d1d587a7b149a9b",
            "subnet_id": "subnet-0ad436970d4f9186e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "rtbassoc-0e90416a921b3e1a1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-04c9dd9ed1aa4310f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c9dd9ed1aa4310f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "njs-default-main-private-eu-west-2a"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-04c9dd9ed1aa4310f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-071d4ab02c42157dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071d4ab02c42157dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "njs-default-main-private-eu-west-2b"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-071d4ab02c42157dc",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-0c972d3284fa40e09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c972d3284fa40e09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "njs-default-main-private-eu-west-2c"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-0c972d3284fa40e09",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-016f311ff6b76679a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016f311ff6b76679a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "njs-default-main-public-eu-west-2a"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-016f311ff6b76679a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-0c58a7a30a5b13af8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c58a7a30a5b13af8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "njs-default-main-public-eu-west-2b"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-0c58a7a30a5b13af8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:subnet/subnet-0ad436970d4f9186e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad436970d4f9186e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055706347965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "njs-default-main-public-eu-west-2c"
            },
            "vpc_id": "vpc-010fa30ecfb923189"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "subnet-0ad436970d4f9186e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:055706347965:vpc/vpc-010fa30ecfb923189",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0055b13f6a163336f",
            "default_route_table_id": "rtb-02eb86630d1702cc3",
            "default_security_group_id": "sg-03cb7bd9432f0e5fe",
            "dhcp_options_id": "dopt-0054277ad6c5fc41e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010fa30ecfb923189",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02eb86630d1702cc3",
            "owner_id": "055706347965",
            "region": "eu-west-2",
            "tags": {
              "Name": "njs-default-main"
            },
            "tags_all": {
              "Name": "njs-default-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055706347965",
            "id": "vpc-010fa30ecfb923189",
            "region": "eu-west-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}